# Narad

./: .gitignore  .gitmodules  .pre-commit-config.yaml  AGENTS.md  ARCHITECTURE.md  AUDIT-AND-ROADMAP.md  GURU-AND-ONBOARDING-PLAN.md  LAUNCH_CHECKLIST.md  LICENSE  README.md  Start Narad.command  WORKFLOWS.md  conversation_memory.py  cost_ledger.py  dev.sh  dharma.py  guru_engine.py  guru_taxonomy.py  harness_contract.py  init_workspace.py  kala_scheduler.py  kunji.py  learning_workspace.py  narad-mock-memory.html  narad-mock-traces.html  narad_config.py  narad_paths.py  narad_server_entry.py  pyproject.toml  smriti_core.py  smriti_embed.py  smriti_indexer.py  smriti_recall_ranker.py  smriti_vector_store.py  subscription_providers.py  swapna.py  tier_engine.py  tool_result.py  vahana.py
10-Projects/: narad.md  vault.md
60-Sessions/: 2026-05-02.md
benchmarks/: baseline_narad_legacy.json  security_retest_2026-07-09.json
contracts/: agent-contracts.json
docs/: HARNESS_BLUEPRINT_2026-06-03.md  KRISHNA.md  MANUAL_TESTPLAN_2026-07-09.md  MATSYA.md  NARAD.md  PARASHURAMA.md  RAMA.md
evals/: golden_tasks.json
phase-0a/: narad_claude.py  narad_deepseek.py  narad_local.py  narad_openai.py  narad_schema.py  requirements.txt  run_evaluation.py  test_prompts.json
phase-0b/: avatar_tools.py  narad_agent.py  requirements.txt  run_demo.py  server.py
phase-1/: andon.py  avatar_agents.py  context_governor.py  finance_patterns.py  health_anomaly.py  health_skill.py  kanban.py  mail_triage_skill.py  model_config.py  model_registry.py  narad_5s.py  narad_agent.py  notion_sync.py  plan_models.py  requirements.txt  run_demo.py  runtime_contract.py  server.py  start.sh  test_context_governor.py  test_cultural_core.py  test_runtime_contract.py  test_server_contract.py  test_smriti_vector_tiers.py  test_teach_flow_guardrails.py  test_voice_engine.py  tts_api.py  turbovec_policy.py  voice_api.py  voice_engine.py
phase-2/: matsya_search.py  requirements.txt  research_tools.py  smriti.py  test_smriti.py  yantra.py  yantra_models.py
phase-3/: requirements.txt  tapas.py
phase-5/: karma_log.py  sutra_engine.py
phase-6/: sankalpa.py
phase-7/: executor.py  requirements.txt  test_executor_sandbox.py  test_media_envelopes.py
phase-8/: audit_trail.py  browser_act_skill.py  browser_skill.py  calendar_skill.py  context_sandbox.py  docling_skill.py  document_skill.py  email_skill.py  finance_skill.py  http_skill.py  local_skill.py  ml_intern_skill.py  requirements.txt  shell_skill.py  sql_skill.py  test_tool_smoke.py  ui_skill.py  webpage_skill.py  webwright_skill.py
phase-9/: backfill_projects.py  learning_workspace_api.py  memory_schema.py  parashurama_context.md  project_execution_api.py  project_manager.py  project_session_info.py  project_tasks.py  project_wiki_api.py  repo_map.py  scribe.py  skills.py  smriti_v2.py  template_selector.py  test_kunji.py  test_learning_workspace.py  test_project_tasks.py  test_skills.py  test_sutra_learning.py  test_tier_engine.py
scripts/: capture_architecture_baseline.py  (+9 more)
(+247 files in other folders)
