[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "narad-harness"
version = "0.1.0"
description = "Narad — a four-plane personal AI harness with cultural architecture (supervisor + 4 avataras, Smriti memory, Tapas learning, Dharma governance)"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "Apache-2.0" }
authors = [{ name = "Neekhil Vatsa", email = "vatsaneekhil@gmail.com" }]

# Core runtime — server, routing, memory, learning loop.
dependencies = [
    "fastapi[standard]>=0.136.0",
    "sse-starlette>=3.4.0",
    "google-adk[extensions]>=1.32.0",
    "google-genai>=1.0.0",
    "openai>=1.30.0",
    "anthropic>=0.40.0",
    "httpx>=0.27.0",
    "requests>=2.32.0",
    "pydantic>=2.6.0",
    "nest_asyncio>=1.6.0",
    "lancedb>=0.20.0",
    "pyarrow>=18.0.0",
    "numpy>=1.26.0",
    "sqlalchemy>=2.0.0",
    "tavily-python>=0.5.0",
]

[project.optional-dependencies]
# Skills that pull heavy or niche dependencies — install per need.
media = [
    "moviepy>=1.0.3",
    "Pillow>=10.0.0",
    "pydub>=0.25.1",
    "soundfile>=0.12.1",
    "scipy>=1.12.0",
    "midiutil>=1.2.1",
    "matplotlib>=3.8.0",
]
documents = ["python-docx>=1.1.0", "docling>=2.0.0"]
browser = ["playwright>=1.44.0"]
local-files = ["send2trash>=1.8.3"]
# phase-0a spike only (macOS Apple Silicon); not part of the product runtime.
mlx-spike = ["mlx>=0.16.0", "mlx-lm>=0.14.0", "outlines>=0.1.0", "huggingface-hub>=0.23.0"]
dev = ["pytest>=8.0.0", "ruff>=0.6.0", "pre-commit>=3.7.0"]
all = ["narad-harness[media,documents,browser,local-files]"]

[project.scripts]
narad-server = "narad_server_entry:main"

[tool.setuptools]
# Flat root modules. Phase dirs are registered by narad_paths at runtime
# until the physical package rename (see LAUNCH_CHECKLIST post-launch backlog).
py-modules = [
    "narad_paths",
    "narad_config",
    "narad_server_entry",
    "smriti_core",
    "smriti_vector_store",
    "smriti_indexer",
    "smriti_recall_ranker",
    "harness_contract",
    "learning_workspace",
    "conversation_memory",
    "dharma",
    "swapna",
    "tool_result",
    "init_workspace",
]

[tool.pytest.ini_options]
testpaths = ["phase-1", "phase-2", "phase-7", "phase-9"]
python_files = ["test_*.py"]
addopts = "-q"

[tool.ruff]
line-length = 110
extend-exclude = ["phase-0a", "phase-0b", ".trash-to-delete", "phase-9/templates"]

[tool.ruff.lint]
select = ["E", "F", "I", "B"]
# E501/B008: FastAPI idioms. E402: the narad_paths bootstrap pattern requires
# imports after the sys.path hop in entry points, and legacy modules import
# lazily mid-file by design (graceful degradation when optional deps missing).
# B904/B905/B023/B005/B039/B007/E741: pre-existing legacy patterns, tracked in
# the post-launch backlog (LAUNCH_CHECKLIST.md) — fix opportunistically.
ignore = [
    "E501", "B008", "E402",
    "B904", "B905", "B023", "B005", "B039", "B007", "E741",
]
